선생님 피드백을 통해, 완성함 내가 몰랐던 부분 3가지 : (1) 이벤트추가시, type : 'mousemove'은  document에 걸자 (①document.addEventListener('mousemove', resize), ②document.removeEventListener('mousemove', resize)) (2) listener 등록할 때, 함수는 ()없이 함수명만 넣고, (3) 함수는 파라미터로 event 를 넣어야 함 const resize = (event) => { ...let resize_col = event.x - 5; .... }

--- a/event/main.html
+++ b/event/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="event_style.css" />
-    <script defer src="event_script.js"></script>
+    <!-- <script defer src="event_script.js"></script> -->
     <title>Document</title>
   </head>
   <body>
@@ -55,5 +55,6 @@
         document.getElementById('alert').style.display = 'none';
       });
     </script> -->
+    <script src="event_script.js"></script>
   </body>
 </html>
